--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,38 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2818
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+# User-specific files
+*.xcuserstate
+*.xcuserdata
 
-\f0\fs24 \cf0 # User-specific files\
-*.xcuserstate\
-*.xcuserdata\
-\
-# Build files\
-DerivedData/\
-build/\
-\
-# Swift Package Manager\
-Packages/\
-.swiftpm/\
-.idea/\
-*.xcodeproj/project.xcworkspace/\
-\
-# CocoaPods\
-Pods/\
-Podfile.lock\
-\
-# Carthage\
-Carthage/Build/\
-\
-# Archives\
-*.xcarchive\
-\
-# SwiftPM\
-.build/\
-\
-# Documentation\
-docs/*.docset\
-*.docc/\
-\
-# Temporary files\
-*.tmp\
-*.swp\
-.DS_Store\
-\
-# Environment files\
-.env\
-}
+# Build files
+DerivedData/
+build/
+
+# Swift Package Manager
+Packages/
+.swiftpm/
+.idea/
+*.xcodeproj/project.xcworkspace/
+
+# CocoaPods
+Pods/
+Podfile.lock
+
+# Carthage
+Carthage/Build/
+
+# Archives
+*.xcarchive
+
+# SwiftPM
+.build/
+
+# Documentation
+docs/*.docset
+*.docc/
+
+# Temporary files
+*.tmp
+*.swp
+.DS_Store
+
+# Environment files
+.env
